Update SearchPage with filters, add custom favicon, optimize mobile CSS

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: #0f0f0f;
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
   }
 
   h1,
